2010-08-18  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed some problems with traceroute.
	Added feature to use a specific snmpcommunity in all modules created
	by a recon task.

2010-08-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Added support
	  for unknown status alerts. Style fixes.

2010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Added support for SNMP filters.

2010-08-10  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Updated build and development version.

2010-08-04  Sancho Lerena <slerena@artica.es>

	* pandora_server.redhat.spec: Specific spec for redhat/centos.

	* util/pandora_count.sh: Script to measure how fast dataserver
	process XML files.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Select uninitialized keep alive modules.

2010-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not mark async modules as unknown.

2010-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, bin/pandora_server: Added a real unknown
	  status.

2010-07-28  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/PredictionServer.pm: Fixed problem that pandora
	server daemon is aborted by division by zero, if numeric data to
	predict are mostly 0.

2010-07-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Make sure delete_pending is set to 0
	  when selecting keepalive modules.

	* lib/PandoraFMS/DataServer.pm: Do not read more than max_queue_files
	  files. Suppressed some warnings.

2010-07-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Removed a misplaced parenthesis.

2010-07-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not compress data for async modules.

	* lib/PandoraFMS/DataServer.pm: Check that the file exists before
	  trying to parse the XML to avoid XML::Simple error messages.

2010-07-22  Ramon Novoa  <rnovoa@artica.es>
